<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glassy</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="myNeighborhood">Mijn wijk</string>
    <string name="fiberNeighborhood">Glasvezel buurt</string>
    <string name="participants">Deelnemers</string>
    <string name="joinIn">Ik doe mee</string>
    <string name="Top10">Buurt top 10</string>
    <string name="FAQ">Veelgestelde vragen</string>
    <string name="action_search">Search</string>
    <string name="button_join">Ik doe ook mee</string>
    <string name="button_facebook">FB</string>
    <string name="label_deelnemers">deelnemers</string>
    <string name="label_deelnemers_aantal">106</string>
    <string name="label_deelnemers_percentage">22%</string>
    <string name="label_buurt">Este\'s glasvezel buurt</string>
    <string name="neighborhood_image_description">Buurtbewoners die aan het barbequen zijn</string>
    <string name="title_activity_mijn_wijk">MijnWijkActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginTop">Ik doe mee!</string>
    <string name="loginFoto">Voeg een leuke foto toe</string>
    <string name="loginKlaar">Klaar</string>
    <string name="loginFacebook">Login via facebook</string>	
    <string name="title_profiel_overlay">Profiel pagina</string>    
    <string name="image">Een profiel foto</string>
</resources>
