<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    tools:context=".Main$DummySectionFragment" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        android:alpha="0.75"
        android:contentDescription="@string/neighborhood_image_description"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="?android:attr/actionBarSize">
    <TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0" />

    <!-- <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section_label"
        android:layout_alignParentBottom="true"
        android:text="@string/joinIn"
        android:textColor="#ffffff" /> -->

    <TextView
        android:id="@+id/label_buurt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_deelnemers"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_buurt"
        android:textStyle="bold"
        android:textColor="#FFF" />

    <LinearLayout
        android:id="@+id/container_deelnemers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_deelnemers_percentage">

        <TextView
            android:id="@+id/label_deelnemers_aantal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_deelnemers_aantal"
            android:textSize="48sp"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/label_deelnemers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_deelnemers"
            android:layout_marginLeft="28dp"
            android:textSize="24sp"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_deelnemers_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_join"
        android:gravity="bottom">

        <TextView
            android:text="@string/label_deelnemers_percentage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="96sp"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@drawable/fblogo"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_join"
        android:layout_alignParentBottom="true"
        android:textColor="#FFF" />
    </RelativeLayout>

</RelativeLayout>